feat: minter initialize, airdrop distributor contract and respective scripts and tests (#18)
* feat(minter): added initialize function and revert error to interface

* feat(minter): add liquid and locked airdrops to minter initialize

* perf(minter): improved gas consumption on initialize

* test: added tests for airdrop

* feat(contracts): added airdrop distributor

* test(airdrop): add tests for airdropdistributor

* feat(script): batched airdrop distribution script

* fix(ci): add airdrop ci json

* docs: add airdropdistributor to readme and specification

* feat(script): updated hardhat deploy script

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           forge build --sizes
 
       - name: Run tests
-        run: OUTPUT_FILENAME=ci.json CONSTANTS_FILENAME=Optimism.json forge test -vvv
+        run: OUTPUT_FILENAME=ci.json CONSTANTS_FILENAME=Optimism.json AIRDROPS_FILENAME=airdrop-ci.json forge test -vvv
         env:
           OPTIMISM_RPC_URL: ${{ secrets.OPTIMISM_RPC_URL }}
           PRIVATE_KEY_DEPLOY: ${{ secrets.PRIVATE_KEY_DEPLOY }}
