refactor: rename velo to aero and generic protocol (#24)
* refactor: renamed files to remove velo and v2

* refactor(contracts): refactored all contracts

* refactor(script): renamed occurrences in script files

* refactor(test): renamed occurrences in tests

* refactor(docs): renamed occurences in the documentation

* refactor: optimism to evms and update gh refs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "velodrome",
+  "name": "aerodrome",
   "version": "2.0.0",
-  "description": "Base layer AMM on Optimism",
+  "description": "Base layer AMM on EVMs",
   "directories": {
     "lib": "lib"
   },
