feat: update airdrop script (#26)

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,16 @@
 PRIVATE_KEY_DEPLOY=0x...
 
-CONSTANTS_FILENAME="Optimism.json"
-OUTPUT_FILENAME="Optimism-Test.json"
+CONSTANTS_FILENAME="Base.json"
+OUTPUT_FILENAME="Base.json"
 
-GOERLI_RPC_URL="https://opt-goerli.g.alchemy.com/v2/<Enter alchemy optimism goerli api key here>"
-GOERLI_SCAN_API_KEY=
-GOERLI_ETHERSCAN_VERIFIER_URL=https://api-goerli-optimistic.etherscan.io/api
+BASE_RPC_URL=
+BASE_SCAN_API_KEY=
+BASE_ETHERSCAN_VERIFIER_URL=https://api.basescan.org/api
 
-OPTIMISM_RPC_URL="https://opt-mainnet.g.alchemy.com/v2/<Enter alchemy optimism api key here>"
-OPTIMISM_SCAN_API_KEY=
-OPTIMISM_ETHERSCAN_VERIFIER_URL=https://api-optimistic.etherscan.io/api
+BASE_GOERLI_RPC_URL=
+BASE_GOERLI_SCAN_API_KEY=
+BASE_GOERLI_ETHERSCAN_VERIFIER_URL=https://api-goerli.basescan.org/api
+
+TENDERLY_RPC_URL=
 
 FORK_BLOCK_NUMBER=105550759
