--- a/foundry.toml
+++ b/foundry.toml
@@ -5,9 +5,10 @@ out = 'out'
 fs_permissions = [{ access = "read-write", path = "./"}]
 
 [rpc_endpoints]
-goerli = "${GOERLI_RPC_URL}"
-optimism = "${OPTIMISM_RPC_URL}"
+base = "${BASE_RPC_URL}"
+base_goerli = "${BASE_GOERLI_RPC_URL}"
+tenderly = "${TENDERLY_RPC_URL}"
 
 [etherscan]
-goerli = { key = "${GOERLI_SCAN_API_KEY}", url = "${GOERLI_ETHERSCAN_VERIFIER_URL}" }
-optimism = { key = "${OPTIMISM_SCAN_API_KEY}", url = "${OPTIMISM_ETHERSCAN_VERIFIER_URL}" }
+base = { key = "${BASE_SCAN_API_KEY}", url = "${BASE_ETHERSCAN_VERIFIER_URL}" }
+base_goerli = { key = "${BASE_GOERLI_SCAN_API_KEY}", url = "${BASE_GOERLI_ETHERSCAN_VERIFIER_URL}" }
