--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "solidity-coverage": "^0.8.2",
     "ts-node": "^10.9.1",
     "typechain": "^8.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "decimal.js": "^10.4.3"
   },
   "scripts": {
     "format": "prettier --write 'contracts/**/*.(sol|json)' 'test/**/*.(sol|json)' 'script/**/*.(sol|ts)'",
