refactor: review code diff (#27)
* refactor: remove velodrome naming

* test: fix airdrop test with new json and limit wallets to save memory

* refactor: fixed assertion in reward distributor

* refactor: removed unnecessary arrays in deployscript

* style: format file

* refactor: refactor method

* test: fix ci

* refactor: change ref to autocompounder

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Run tests
         run: OUTPUT_FILENAME=ci.json CONSTANTS_FILENAME=Base.json AIRDROPS_FILENAME=airdrop-ci.json forge test -vvv
         env:
+          BASE_RPC_URL: ${{ secrets.BASE_RPC_URL }}
           OPTIMISM_RPC_URL: ${{ secrets.OPTIMISM_RPC_URL }}
           PRIVATE_KEY_DEPLOY: ${{ secrets.PRIVATE_KEY_DEPLOY }}
           
