--- a/.env.example
+++ b/.env.example
@@ -13,4 +13,8 @@ BASE_GOERLI_ETHERSCAN_VERIFIER_URL=https://api-goerli.basescan.org/api
 
 TENDERLY_RPC_URL=
 
-FORK_BLOCK_NUMBER=105550759
+BASE_RPC_URL=
+BASE_SCAN_API_KEY=
+BASE_ETHERSCAN_VERIFIER_URL=https://api.basescan.org/api
+
+FORK_BLOCK_NUMBER=3161469
